fixed the alignment of file icons in grid

--- a/code/media/koowa/com_files/less/koowa/_files.less
+++ b/code/media/koowa/com_files/less/koowa/_files.less
@@ -1138,7 +1138,7 @@ table th.file-count {
         overflow: hidden;
         width: inherit;
         height: inherit;
-        line-height: 150px;
+        padding: 31px 0 0;
         text-decoration: none;
         &:hover {
             text-decoration: none;
